--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -7,7 +7,7 @@
             <img src="./assets/svg/logo_yard_sale.svg" alt="">
         </a>
         <a href="">
-            <img src="./assets/svg/icon_shpping_cart.svg" alt="">
+            <img src="./assets/svg/icon_shopping_cart.svg" alt="">
         </a>
     </div>
     <div class="side-menu" [class.active]="activeMenu">
@@ -35,10 +35,11 @@
             <div class="acount">
 
             </div>
-            <div>
+            <div class="cart">
                 <a href="">
                     <img src="./assets/svg/icon_shopping_cart.svg" alt="">
                 </a>
+                <span class="counter">{{ counter }}</span>
             </div>
         </div>
     </div>
