--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,3 +1,5 @@
-<app-img [img]="product.image"></app-img>
+<app-img *ngIf="product.images.length > 0" [img]="product.images[0]"></app-img>
 <h2>{{ product.price }}</h2>
-<p>{{ product.name }}</p>
+<p>{{ product.title }}</p>
+<button (click)="onShowDetail()">Ver Producto</button>
+<button (click)="onAddtoCart()">Add to Cart</button>
